Further fixes in light style.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/HashtagNotificationHeader.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/HashtagNotificationHeader.xaml
@@ -32,7 +32,7 @@
             BorderThickness="0"
             Height="49"
             Opacity="{StaticResource AppBarOpacity}"
-            Background="{StaticResource PivotHeaderBackground}">
+            Background="{ThemeResource PivotHeaderBackground}">
 
         <Grid>
             <Grid.ColumnDefinitions>
