--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/HashtagSuggestionBox.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/HashtagSuggestionBox.xaml
@@ -10,9 +10,10 @@
     DataContext="{Binding Cache, Mode=OneWay, Source={StaticResource Locator}}">
 
     <StackPanel HorizontalAlignment="Stretch"
-                Margin="5,5,5,0">
+                Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
         <TextBox x:Name="HashtagBox"
+                 Margin="5,5,5,0"
                  Text="#"
                  SelectionStart="1"
                  Style="{StaticResource TextBoxStyle1}"
