--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/PivotPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/PivotPage.xaml
@@ -17,32 +17,49 @@
         <DataTemplate x:Name="EntryTemplate">
             <controls:FullEntry />
         </DataTemplate>
-    </UserControl.Resources>
-    
-    <Grid x:Name="PivotPageGrid"
-          Loaded="PivotPageGrid_Loaded">
 
-        <Popup x:Name="NewMirkoEntriesPopup">
-            
+        <Popup x:Key="NewMirkoEntriesPopup"
+               VerticalOffset="15"
+               IsOpen="True">
+
             <Popup.Resources>
-                <Storyboard x:Name="PopupFadeIn">
+                <Storyboard x:Key="PopupFadeIn">
                     <DoubleAnimation Storyboard.TargetName="PopupGrid"
                                      Storyboard.TargetProperty="Opacity"
                                      To="{ThemeResource AppHeaderOpacity}"
                                      Duration="0:0:0.2" />
+
+                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="PopupGrid"
+                                                   Storyboard.TargetProperty="IsHitTestVisible"
+                                                   BeginTime="0:0:0.2">
+                        <DiscreteObjectKeyFrame KeyTime="0">
+                            <DiscreteObjectKeyFrame.Value>
+                                <x:Boolean>True</x:Boolean>
+                            </DiscreteObjectKeyFrame.Value>
+                        </DiscreteObjectKeyFrame>
+                    </ObjectAnimationUsingKeyFrames>
                 </Storyboard>
 
-                <Storyboard x:Name="PopupFadeOut">
+                <Storyboard x:Key="PopupFadeOut">
                     <DoubleAnimation Storyboard.TargetName="PopupGrid"
                                      Storyboard.TargetProperty="Opacity"
                                      To="0.0"
                                      Duration="0:0:0.2"/>
+
+                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="PopupGrid"
+                                                   Storyboard.TargetProperty="IsHitTestVisible">
+                        <DiscreteObjectKeyFrame KeyTime="0">
+                            <DiscreteObjectKeyFrame.Value>
+                                <x:Boolean>False</x:Boolean>
+                            </DiscreteObjectKeyFrame.Value>
+                        </DiscreteObjectKeyFrame>
+                    </ObjectAnimationUsingKeyFrames>
                 </Storyboard>
 
             </Popup.Resources>
 
             <Grid x:Name="PopupGrid"
-                  Opacity="{StaticResource AppHeaderOpacity}"
+                  Opacity="0"
                   Background="Transparent"
                   Height="55"
                   Width="55">
@@ -52,7 +69,7 @@
                         <core:InvokeCommandAction Command="{Binding AddNewMirkoEntries}" />
                     </core:EventTriggerBehavior>
                 </i:Interaction.Behaviors>
-                
+
                 <Ellipse Fill="#67a7d2"
                          Height="55"
                          Width="55"/>
@@ -64,6 +81,10 @@
                            HorizontalAlignment="Center"/>
             </Grid>
         </Popup>
+    </UserControl.Resources>  
+    
+    <Grid x:Name="PivotPageGrid"
+          Loaded="PivotPageGrid_Loaded">
 
         <Popup x:Name="TimeSpanIndicatorPopup"
                VerticalOffset="-22">
