--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/HashtagSuggestionBox.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/HashtagSuggestionBox.xaml
@@ -4,6 +4,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:i="using:Microsoft.Xaml.Interactivity"
+    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400"
@@ -19,7 +21,7 @@
                  Style="{StaticResource TextBoxStyle1}"
                  InputScope="Search"
                  TextChanged="HashtagBox_TextChanged"
-                 KeyDown="HashtagBox_KeyDown"/>
+                 KeyDown="HashtagBox_KeyDown" />
 
         <ListView Height="140"
                   IsItemClickEnabled="True"
@@ -29,6 +31,7 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding}"
+                               Margin="5,0,0,5"
                                FontSize="24"
                                Foreground="Gray" />
                 </DataTemplate>
