--- a/Mirko_v2/Mirko_v2.WindowsPhone/Resources/Common.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Resources/Common.xaml
@@ -16,4 +16,9 @@
 
     <Color x:Key="StatusBarForegroundLight">#3D9CDE</Color>
 
+    <SolidColorBrush x:Key="AuthorCommentFill" Color="White" />
+    <SolidColorBrush x:Key="CommentDirectedFill" Color="#6cb0dd" />
+    <SolidColorBrush x:Key="AuthorCommentFillLight" Color="DarkGray" />
+    <SolidColorBrush x:Key="CommentDirectedFillLight" Color="#6cb0dd" />
+
 </ResourceDictionary>
