--- a/Mirko_v2/Mirko_v2.WindowsPhone/Resources/Converters.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Resources/Converters.xaml
@@ -29,5 +29,6 @@
     <converters:ObservedToText x:Key="ObservedToText" />
     <converters:BlacklistToText x:Key="BlacklistToText" />
     <converters:InvertBool x:Key="InvertBool" />
+    <converters:AuthorIndicator x:Key="AuthorIndicator" />
 
 </ResourceDictionary>
