--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/DonationPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/DonationPage.xaml
@@ -9,9 +9,7 @@
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     mc:Ignorable="d"
     d:DesignHeight="300"
-    d:DesignWidth="400"
-    DataContext="{Binding Donation, Mode=OneWay, Source={StaticResource Locator}}"
-    x:Name="root">
+    d:DesignWidth="400">
     
     <Grid Margin="15,0,15,0">
         <Grid.RowDefinitions>
@@ -21,43 +19,21 @@
         
         <TextBlock Grid.Row="0"
                    Style="{StaticResource BodyTextBlockStyle}"
-                   FontSize="16"
+                   FontSize="17"
                    TextWrapping="WrapWholeWords">
             <Run Text="Jeżeli chcesz podziękować za setki godzin spędzone nad rozwijaniem tej aplikacji, możesz przesłać dobrowolną dotację." />
             <LineBreak />
             <Run Text="Nie odblokuje to żadnych dodatkowych funkcji, ponieważ aplikacja jest w całości darmowa." />
             <LineBreak />
-            <Run Text="Dotacje można składać wielokrotnie." />
-            <LineBreak />
-            <Run Text="Płatność odbywa się poprzez Sklep Windows." />
+            <Run Text="Płatność odbywa się poprzez serwis PayPal." />
             <LineBreak />
             <LineBreak />
-            <Run Text="Możesz wybrać spośród następujących stawek:" />
+            <Run Text="Dzięki Tobie będę miał na czipsy i batony ( ͡° ͜ʖ ͡°)." />
         </TextBlock>
-        
-        <ListView Grid.Row="1"
-                  ItemContainerStyle="{StaticResource ListViewItemStretchNoTilt}"
-                  ItemsSource="{Binding Products}">
-            
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Style="{StaticResource SubheaderTextBlockStyle}">
-                        <Run Text="&#x2022;" />
-                        <Run Text="{Binding Item2}" />
-                        <Run Text="PLN" Foreground="DarkGray" />
-                        
-                        <i:Interaction.Behaviors>
-                            <core:EventTriggerBehavior EventName="Tapped">
-                                <core:InvokeCommandAction Command="{Binding ElementName=root, Path=DataContext.BuyProduct}"
-                                                          CommandParameter="{Binding Item1}" />
-                            </core:EventTriggerBehavior>
-                        </i:Interaction.Behaviors>
-                        
-                    </TextBlock>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-            
-        </ListView>
+       
+        <Button Grid.Row="1"
+                Click="Button_Click"
+                Content="dokonaj dotacji" />
        
     </Grid>
 </UserControl>
