--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/AtNotificationsPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/AtNotificationsPage.xaml
@@ -59,7 +59,7 @@
                                        Margin="10,0,10,9"
                                        FontSize="14"
                                        IsTextSelectionEnabled="False"
-                                       utils:Properties.Notification="{Binding Data}"/>
+                                       utils:Injectors.Notification="{Binding Data}"/>
                     </DataTemplate>
                 </ListView.ItemTemplate>
 
