--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/ConversationPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/ConversationPage.xaml
@@ -45,7 +45,7 @@
                 <Border BorderThickness="0"
                         Background="{ThemeResource ReceivedMessageBackground}">
                     <StackPanel>
-                        <RichTextBlock utils:Properties.Html="{Binding Data.Text}"
+                        <RichTextBlock utils:Injectors.HTML="{Binding Data.Text}"
                                        FontSize="{Binding Fonts.PMFontSize, Mode=OneWay, Source={StaticResource Locator}}"
                                        Margin="12,7,12,7"
                                        Foreground="{ThemeResource ReceivedMessageForeground}"/>
@@ -79,7 +79,7 @@
                 <Border BorderThickness="0"
                         Background="{ThemeResource SentMessageBackground}">
                     <StackPanel>
-                        <RichTextBlock utils:Properties.Html="{Binding Data.Text}"
+                        <RichTextBlock utils:Injectors.HTML="{Binding Data.Text}"
                                        FontSize="{Binding Fonts.PMFontSize, Mode=OneWay, Source={StaticResource Locator}}"
                                        Margin="12,7,12,7"
                                        Foreground="{ThemeResource SentMessageForeground}"/>
