--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/Entry.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/Entry.xaml
@@ -7,7 +7,6 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:utils="using:Mirko_v2.Utils"
     xmlns:controls="using:Mirko_v2.Controls"
-    xmlns:wp="using:Mirko_v2.Controls.WrapPanel"
     xmlns:i="using:Microsoft.Xaml.Interactivity"
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     mc:Ignorable="d"
@@ -31,8 +30,12 @@
             <MenuFlyoutItem Text="nie obserwuj" Tag="unobserveTag" Visibility="Collapsed" 
                             Command="{Binding UnobserveHashtag, Source={Binding Notifications, Mode=OneWay, Source={StaticResource Locator}}}"
                             CommandParameter="{Binding TappedHashtag}"/>
-            <MenuFlyoutItem Text="czarnolisto" Tag="blacklistTag" Command="{Binding BlacklistHashtag}" />
-            <MenuFlyoutItem Text="usuń z czarnolisto" Tag="unblacklistTag" Visibility="Collapsed" />
+            <MenuFlyoutItem Text="czarnolisto" Tag="blacklistTag" 
+                            Command="{Binding BlacklistTag, Source={Binding Blacklist, Mode=OneWay, Source={StaticResource Locator}}}"
+                            CommandParameter="{Binding TappedHashtag}"/>
+            <MenuFlyoutItem Text="usuń z czarnolisto" Tag="unblacklistTag" Visibility="Collapsed"
+                            Command="{Binding UnblacklistTag, Source={Binding Blacklist, Mode=OneWay, Source={StaticResource Locator}}}"
+                            CommandParameter="{Binding TappedHashtag}"/>
         </MenuFlyout>
 
         <DataTemplate x:Key="VotersDataTemplate">
