Don't show AppBar in ProfilePage when viewing your own profile.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/Resources/Converters.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Resources/Converters.xaml
@@ -30,5 +30,6 @@
     <converters:BlacklistToText x:Key="BlacklistToText" />
     <converters:InvertBool x:Key="InvertBool" />
     <converters:AuthorIndicator x:Key="AuthorIndicator" />
+    <converters:ProfileAppBar x:Key="ProfileAppBar" />
 
 </ResourceDictionary>
