Seems to work slightly better.

--- a/Mirko/Mirko.Shared/App.xaml
+++ b/Mirko/Mirko.Shared/App.xaml
@@ -19,6 +19,7 @@
                 <ResourceDictionary Source="Resources/Converters.xaml"/>
                 <ResourceDictionary Source="Resources/Common.xaml"/>
                 <ResourceDictionary Source="Resources/QKit.xaml"/>
+                <ResourceDictionary Source="Resources/Fonts.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
 
